merge: integrate wip-notification-service into main